{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 30,
  "lineage": "9967d2d6-a4df-42ed-8390-5ce9d42d60a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "medusa_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0182f373e66f89c85",
            "arn": "arn:aws:ec2:us-east-1:863751116352:instance/i-05443691639e064f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05443691639e064f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a026ed5875e0961f",
            "private_dns": "ip-10-0-1-224.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.224",
            "public_dns": "ec2-54-163-31-137.compute-1.amazonaws.com",
            "public_ip": "54.163.31.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ccfc74b690554f20",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0630d06e9ba471660",
            "tags": {
              "Name": "medusa-instance"
            },
            "tags_all": {
              "Name": "medusa-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b5ade45ad0f366e"
            ]
          },
          "dependencies": [
            "aws_subnet.medusa_public_subnet",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "medusa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863751116352:internet-gateway/igw-0485963e94fa516d1",
            "id": "igw-0485963e94fa516d1",
            "owner_id": "863751116352",
            "tags": {
              "Name": "medusa-igw"
            },
            "tags_all": {
              "Name": "medusa-igw"
            },
            "vpc_id": "vpc-0624da3b5b91a0bc5"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "medusa_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863751116352:route-table/rtb-03d95e5f8b31511e5",
            "id": "rtb-03d95e5f8b31511e5",
            "owner_id": "863751116352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0485963e94fa516d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medusa-public-rt"
            },
            "tags_all": {
              "Name": "medusa-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0624da3b5b91a0bc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "medusa_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079a3fde3a1be5295",
            "route_table_id": "rtb-03d95e5f8b31511e5",
            "subnet_id": "subnet-0630d06e9ba471660"
          },
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_route_table.medusa_public_rt",
            "aws_subnet.medusa_public_subnet",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "medusa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863751116352:security-group/sg-018c2fe975172a9f5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018c2fe975172a9f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240905113818990500000001",
            "name_prefix": "terraform-",
            "owner_id": "863751116352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "medusa-sg"
            },
            "tags_all": {
              "Name": "medusa-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0624da3b5b91a0bc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "medusa_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863751116352:subnet/subnet-09141b479e213f247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09141b479e213f247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863751116352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-private-subnet-a"
            },
            "tags_all": {
              "Name": "medusa-private-subnet-a"
            },
            "vpc_id": "vpc-0624da3b5b91a0bc5"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "medusa_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863751116352:subnet/subnet-005425b2c61ca4c40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005425b2c61ca4c40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863751116352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-private-subnet-b"
            },
            "tags_all": {
              "Name": "medusa-private-subnet-b"
            },
            "vpc_id": "vpc-0624da3b5b91a0bc5"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "medusa_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863751116352:subnet/subnet-0630d06e9ba471660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0630d06e9ba471660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863751116352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-public-subnet"
            },
            "tags_all": {
              "Name": "medusa-public-subnet"
            },
            "vpc_id": "vpc-0624da3b5b91a0bc5"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "medusa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863751116352:vpc/vpc-0624da3b5b91a0bc5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00df28abb40d8a5e9",
            "default_route_table_id": "rtb-06efb814ee9530b74",
            "default_security_group_id": "sg-08b5ade45ad0f366e",
            "dhcp_options_id": "dopt-0ff1b3b0391fbca81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0624da3b5b91a0bc5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06efb814ee9530b74",
            "owner_id": "863751116352",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            }
          }
        }
      ]
    }
  ]
}